Java21 port